# Customer-Purchase-Prediction-MLOPS

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BLUEPRINT.md  README.md  docker-compose.yml  dvc.yaml  environment.yml  pyproject.toml
.agent/skills/superpowers-workflow/scripts/: record_activation.py  spawn_subagent.py
.agent/workflows/: superpowers-brainstorm.md
.dvc/: config
.github/instructions/: copilot-instructions.instructions.md
.github/workflows/: ci.yml
.opencode/skills/data-quality-auditor/: SKILL.md
.opencode/skills/senior-data-engineer/: SKILL.md
.opencode/skills/senior-frontend/: SKILL.md
.opencode/skills/senior-fullstack/: SKILL.md
docs/: BLUEPRINT_PATCH_PLAN.md  CODEBASE_REVIEW_2026-05-14.md  RAW_DATA_INTAKE.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WEEK1_SETUP.md
docs/BLUEPRINT/: 01_OVERVIEW.md  02_ARCHITECTURE.md  03_FEATURES.md  04_PIPELINES.md  05_PROJECT_STRUCTURE.md  06_ERROR_HANDLING.md  07_TESTING.md  08_SECURITY.md  09_EXPLAINABILITY.md  10_PERFORMANCE.md  11_DEMO.md  12_ROADMAP.md
docs/CHECKLIST/: WEEK_1_DATA_FOUNDATION_CHECKLIST.md
docs/CODE REVIEW/: code_review_main.md
docs/superpowers/: 2026-05-11-sprint2b-completion-report.md
docs/superpowers/plans/: 2026-05-10-week2-sprint2a-mvp.md  2026-05-10-week2-sprint2b-implementation.md  2026-05-12-gold-oom-half-october-streaming.md  2026-05-13-week2-categorical-aware-training.md  2026-05-14-event-type-average-precision-test-eval.md  2026-05-14-gpu-aware-training.md  2026-05-15-week3-stream-processing-vertical-slice.md
docs/superpowers/plans/2026-05-15-week3-stream-processing-vertical-slice/: 01-event-id-and-simulator.md  02-stream-processor.md  03-serving-bundle-and-prediction-api.md  04-infra-ci-docs-and-verification.md  (+1 more)
docs/superpowers/specs/: 2026-04-28-skill-optimization-design.md  2026-05-06-week2-training-pipeline-plan.md  2026-05-10-week2-sprint2a-design.md  2026-05-10-week2-sprint2b-design.md  2026-05-15-week3-stream-processing-design.md
infra/minio/: README.md  init-bucket.sh
infra/mlflow/: Dockerfile
infra/postgres/: init.sql
infra/redpanda/: init-topics.sh
notebooks/: 04_split_raw_data.ipynb  commerce-behavior-data-analysis.ipynb  eda.ipynb  raw_schema_eda.ipynb
reports/: .gitignore  train_metrics.json
scripts/: week3_compose_smoke.py
services/: __init__.py
services/prediction_api/: Dockerfile  __init__.py  app.py  bundle.py  features.py  requirements.txt
services/simulator/: Dockerfile  __init__.py  app.py  replay.py  requirements.txt
services/stream_processor/: Dockerfile  __init__.py  app.py  db.py  processor.py  requirements.txt  state.py
services/tests/: test_compose_contract.py  test_event_id.py  test_prediction_api.py  test_prediction_features.py  test_simulator_publish.py  test_simulator_replay.py  test_stream_processor.py  test_stream_processor_app.py  test_stream_state.py  test_week3_smoke_script.py
shared/: constants.py  event_id.py  parquet.py  schemas.py
training/src/: bronze.py  categorical_features.py  config.py  data_lineage.py  evaluate.py  explainability.py  features.py  gold.py  model_validation.py  session_split.py  silver.py  train.py
training/tests/: test_categorical_features.py  test_data_lake.py  test_data_lineage.py  test_evaluate.py  test_explainability.py  test_gold_features.py  test_gold_schema.py  test_gold_split_validation.py  test_gold_streaming.py  test_model_validation.py  test_raw_window_selection.py  test_session_split.py  test_silver_dataset_io.py  test_train.py
