[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iuh-final-mlops"
version = "0.1.0"
description = "Week 1 data foundation pipeline for the IUH MLOps final project."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2.0",
    "quixstreams>=3.23.0",
    "pyarrow==24.0.0",
    "polars==1.40.1",
    "python-dotenv==1.2.2",
    "psutil==7.2.2",
    "dvc[s3]==3.67.1",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "mlflow>=2.8.0",
    "shap>=0.44.0",
    "optuna>=3.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "training*", "services*"]

[tool.pytest.ini_options]
testpaths = ["training/tests", "services/tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".opencode",
    "notebooks",
    "notebook-planned",
]

[tool.mypy]
python_version = "3.11"
packages = ["shared", "training"]
ignore_missing_imports = true
